force-app/main/default/objects/Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>To register the recipient’s primary street address or delivery location</description>
    <inlineHelpText>To register the recipient’s primary street address or delivery location</inlineHelpText>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>