force-app/main/default/objects/Address__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>To register the precise location of the recipient’s apartment, unit, room, or floor number</description>
    <inlineHelpText>To register the precise location of the recipient’s apartment, unit, room, or floor number</inlineHelpText>
    <label>Address Line 2</label>
    <type>TextArea</type>
</CustomField>