force-app/main/default/objects/Address__c/fields/Denotation__c.field-meta.xml
<CustomField>
    <fullName>Denotation__c</fullName>
    <description>Extra remarks</description>
    <label>Denotation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>