force-app/main/default/objects/Address__c/fields/Full_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Street_Name__c</fullName>
    <description>For use in flow to set billing/shipping street</description>
    <formula>IF(
OR(ISBLANK(TEXT(Country__c)), TEXT(Country__c) = &#39;NL&#39;),
IF(
NOT(ISBLANK(PO_Box_Number__c)),
&quot;Postbus &quot;&amp;PO_Box_Number__c,
IF(
NOT(ISBLANK(Freepost_number__c)),
&quot;Antwoordnummer &quot;&amp;Freepost_number__c,
Street__c&amp;&quot; &quot;&amp; House_Number__c&amp;&quot; &quot;&amp;House_Letter__c&amp;&quot; &quot;&amp;House_Number_Addition__c
)
),
TRIM(Address_Line_1__c&amp;&quot; &quot;&amp;Address_Line_2__c)
)</formula>
    <label>Full Street Name</label>
    <type>Text</type>
</CustomField>