force-app/main/default/objects/Address__c/fields/House_Letter__c.field-meta.xml
<CustomField>
    <fullName>House_Letter__c</fullName>
    <description>To register the House Letter of the Address</description>
    <inlineHelpText>To register the House Letter of the Address</inlineHelpText>
    <label>House Letter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>