force-app/main/default/objects/Address__c/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>House number</description>
    <inlineHelpText>House number</inlineHelpText>
    <label>House Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>