force-app/main/default/objects/Address__c/fields/PO_Box_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Box_Number__c</fullName>
    <description>To register the PO Box Number</description>
    <inlineHelpText>To register the PO Box Number</inlineHelpText>
    <label>PO Box Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>