force-app/main/default/objects/Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal code for this address</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>