force-app/main/default/objects/Address__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dutch_Provinces</valueSetName>
    </valueSet>
</CustomField>