force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unique_Key__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>House_Letter__c</columns>
    <columns>House_Number__c</columns>
    <columns>House_Number_Addition__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Freepost_number__c</columns>
    <columns>PO_Box_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>